[gd_scene load_steps=6 format=3 uid="uid://d0ibkc4gyl8wa"]

[ext_resource type="SpriteFrames" uid="uid://cdmhq4mh85kma" path="res://Assets/SpriteFrames/sprite_frames_flytrap.tres" id="1_35xvj"]
[ext_resource type="Script" uid="uid://bo4jbykaihsmn" path="res://Assets/Scripts/flytrap.gd" id="1_kjugw"]
[ext_resource type="SpriteFrames" uid="uid://doprvf02sd84g" path="res://Assets/SpriteFrames/new_sprite_closed_flytrap.tres" id="3_s3x85"]
[ext_resource type="AudioStream" uid="uid://dpf58re6ghr5q" path="res://Assets/Sound Effects/Flytrap_Chomp.mp3" id="4_7ebea"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kjugw"]

[node name="Flytrap" type="Area2D"]
texture_filter = 1
scale = Vector2(2, 2)
script = ExtResource("1_kjugw")

[node name="FlytrapAni" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_35xvj")

[node name="Trap_Area" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kjugw")

[node name="Chomp_Time" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="FlytrapClosed" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_s3x85")

[node name="Chomp_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7ebea")

[connection signal="timeout" from="Chomp_Time" to="." method="_on_chomp_time_timeout"]
